[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = [
    "Authors Here"
]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.10"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[tool.poetry.scripts]
app = ''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
